--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AppMitutoyo
 endorsed.classpath=
 excludes=
+file.reference.JGuiExtensible.jar=lib/JGuiExtensible.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.JGuiExtensible.jar}
+    ${reference.JGuiExtensible.jar}:\
+    ${file.reference.JGuiExtensible.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
