--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,14 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AppMitutoyo
 endorsed.classpath=
 excludes=
-file.reference.JGuiExtensible.jar=lib/JGuiExtensible.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.JGuiExtensible.jar}:\
-    ${file.reference.JGuiExtensible.jar}
+    ${reference.JGuiExtensible.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=\ --enable-preview
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=
@@ -89,7 +87,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=\ --enable-preview
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
