--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,10 +36,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Mitutoyo
 endorsed.classpath=
 excludes=
+file.reference.JGuiExtensible.jar=lib/JGuiExtensible.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.JGuiExtensible.jar}
+    ${file.reference.JGuiExtensible.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
@@ -80,8 +81,6 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.JGuiExtensible=../JGuiExtensible
-reference.JGuiExtensible.jar=${project.JGuiExtensible}/dist/JGuiExtensible.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
