--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,11 +36,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Mitutoyo
 endorsed.classpath=
 excludes=
+file.reference.JGuiExtensible.jar=lib/JGuiExtensible.jar
 file.reference.JTattoo-1.6.13.jar=lib/JTattoo-1.6.13.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.JGuiExtensible.jar}:\
+    ${file.reference.JGuiExtensible.jar}:\
     ${file.reference.JTattoo-1.6.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
@@ -82,8 +83,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.JGuiExtensible=../JGuiExtensible
-reference.JGuiExtensible.jar=${project.JGuiExtensible}/dist/JGuiExtensible.jar
+project.license=gpl30
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
